added create workspace endpoint
