# gen/http/openapi3.yaml
@@ -52,6 +52,7 @@ paths:
                             $ref: '#/components/schemas/CreateWorkspaceRequestBody'
                         example:
                             name: Voluptatem corporis nemo qui dicta occaecati.
+                            owner_id: 27bd44a5-6cf6-4e18-8b6b-ae8e809b4337
             responses:
                 "200":
                     description: OK response.
@@ -72,11 +73,17 @@ components:
                 name:
                     type: string
                     example: Voluptatem corporis nemo qui dicta occaecati.
+                owner_id:
+                    type: string
+                    example: 27bd44a5-6cf6-4e18-8b6b-ae8e809b4337
+                    format: uuid
             description: Request body for createWorkspace.
             example:
                 name: Voluptatem corporis nemo qui dicta occaecati.
+                owner_id: 27bd44a5-6cf6-4e18-8b6b-ae8e809b4337
             required:
                 - name
+                - owner_id
         Document:
             type: object
             properties:
